2000-07-29  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/Makefile.in, transports/smtp/smtp.h,
	  transports/smtp/smtp.c, transports/smtp/getmxrr.c:
	    Moved  getmxrr()  function to separate file, and
	    wrapped it with a test shell in attempt to understand
	    *why* it seems to fail at some inputs at some machines.

	* scheduler/msgerror.c:
	    Hooks for "expanded" action status.

	* transports/smtp/smtp.c:
	    Streamlined error handling when returning from getmxrr().

2000-07-27  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    - At getmxrr() a missed state variable initialization
	      (to zero) caused errorneous eternal loops. OOPS!
	    - smtp_sync() didn't handle RCPTSTATE_500 at all.. (oops).
	    - calls to  stashmyaddresses()  don't need to carry determined
	      self-host-identity.

2000-07-24  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* scheduler/msgerror.c:
	    A simple spelling error in normally invisible text sent
	    towards the user inside the delivery status reports.

2000-07-18  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Possibly  ssfgets()  fell on over-by-one allocation/storage
	    error so that the buffer tail got stomped over, and some
	    systems didn't like it --> they crashed.

	* configure.in, router/db.c, router/libdb/bsdbtree.c,
	  router/libdb/bsdhash.c, smtpserver/policytest.h,
	  smtpserver/policytest.c, utils/makedb/makedb.c,
	  utils/makedb/dblook.c, utils/vacation/vacation.c,
	  README.UPGRADING:
	    Reworked things to support another kind of set of
	    SleepyCat DB libraries.  Not yet covering version 3.x.

	* lib/rfc822scan.c:
	    A bit more characters into "no need to quote these here"
	    set -- allow address <@[1.2.3.4]:foo@bar> and <foo@[1.2.3.4]>

2000-07-17  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* libs/Makefile.in, Makefile.in:
	    Merge  libsfio.a  generation into this file also, so that